fix background resizing on mobile

--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -153,8 +153,8 @@ header
 {
     background-image: url(../img/Upper-Falls.jpg);
     background-attachment: fixed;
-    background-position: center;
-    width: 100vw;
+    background-size: 200% 100vh;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -266,6 +266,5 @@ li
     #hero {
         background-size: cover;
         background-position: 0;
-        width: 100%;
     }
 }
